--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-youtube": "^7.11.2"
   },
   "scripts": {
-    "start": "set HTTPS=true&&react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
