--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://manogajapathi.github.io/mano-web",
+  "homepage": "https://manogajapathi.com",
   "name": "mano-web",
   "version": "0.1.0",
   "private": true,
