node version added

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "homepage": ".",
+  "homepage": "manogajapathi.com",
   "name": "mano-web",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.13.2"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
