--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "name": "mano-web",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "22.16.0"
-  },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -18,7 +15,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-swipeable-views": "^0.13.9",
-    "react-youtube": "^7.13.1"
+    "react-youtube": "^7.13.1",
+    "packageManager": "pnpm@6.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
