--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "homepage": "manogajapathi.com",
   "name": "mano-web",
   "version": "0.1.0",
-  "private": true,
+  "private": true,  
+  "engines": {
+    "node": "16.13.2"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
@@ -15,8 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-swipeable-views": "^0.13.9",
-    "react-youtube": "^7.13.1",
-    "packageManager": "pnpm@6.3.2"
+    "react-youtube": "^7.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
